wp-content/themes/eyeconbeauty/scss/account/_orders.scss
.order_description {
  mark {
    background: none;
    font-weight: 600;
  }
}

.return-to-orders {
  margin-right: 0.5rem;
  font-weight: 600;
  @include d-flex(row, 0.5rem);
  align-items: center;
  text-transform: uppercase;

  svg {
    width: 1rem;
    height: 1rem;
    stroke-width: 2px;
  }
  
}

.account-orders-table {
  display: block;

  tbody, tr, td {
    display: block;
  }

  .order-list {
    @include d-flex(column, 2rem);
    
    .order {
      @include d-flex(column, 0.5rem);
      justify-content: space-between;
      border-bottom: 1px solid $grey4;
      padding-bottom: 2rem;

      @include mq(min-width, $l-wd) {
        //font-size: 0.75rem;
      }

      td {
        display: flex;
      }

      .order__info {
        @include d-flex(row, 0.333333rem);
      }

      .btn  {
        padding: 0.5rem 1rem;
        @include mq(min-width, $l-wd) {
          //font-size: 0.75rem;
        }
  
      }

      &:last-child {
        border: none;
        padding-bottom: 0;
      }
    }
  }

  
}

